<resources>
    <string name="app_name">MyApplication111</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home_id">HOME</string>
    <string name="norification">NOTIFICATION</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="dashboards">Dashboard</string>
    <string name="sms">sms</string>
    <string name="permission_not_granted">PermisionNotGranted</string>
    <string name="failure_permission">FailurePermision</string>
    <string name="textview">textview</string>
    <string name="alarm">Alarm</string>
    <string name="stop">STOP</string>
    <string name="textview12">TextView</string>
    <string name="tw">TextView</string>
    <string name="button123213124">Button</string>
    <string name="ButtonDate">Calendar</string>
    <string name="buttonTime">Time</string>
    <string name="savename">SaveName</string>
    <string name="savenumb">SaveNumb</string>
    <string name="hint_name">name</string>
    <string name="hint_number">Number</string>
    <string name="name_title">Title name</string>
    <string name="happy_birthday">Happy Birthday</string>
    <string name="_100_year">100 year !</string>
    <string name="like">Like</string>
    <string name="sorry">Sorry</string>
    <string name="enter_message_here">Enter message here</string>
    <string name="menu_place" />
    <string name="selectnumber">SelectNumber</string>
    <string name="history_name">Name</string>
    <string name="clock">Clock</string>
    <string name="alarm_history">ALARM</string>
    <string name="set">SET</string>
    <string name="get_date">Get Date</string>
    <string name="get_time">Get Time</string>
    <string name="date">Date</string>
    <string name="stop_history">Stop</string>
    <string name="set_alarm_history">Set Alarm:</string>
    <string name="next">NEXT</string>
    <string name="time">time</string>
    <string name="datetx">date</string>
    <string name="read">Read</string>

    <string name="add">add</string>
    <string name="plus">+</string>
    <string name="empty_item">Empty Item</string>
    <string name="timeList">Time</string>
    <string name="dateList">Date</string>
    <string name="history_menu">History</string>
    <string name="sms_menu">SMS</string>
    <string name="birthday">Birthday</string>
    <string name="birth">HB</string>
    <string name="name">Name</string>
    <string name="delete">Delete</string>
    <string name="database_delete">Delete</string>
    <string name="times">Time</string>
    <string name="dates">Date</string>
</resources>
