<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_profile_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:maxLines="2"
            android:text="@string/name"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textview_amount_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:maxLines="2"
            android:text="@string/timeList"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textview_name_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="@string/dateList"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/read_database"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:backgroundTint="#3D3C3C"
        android:tint="#3F51B5"
        app:srcCompat="@android:drawable/ic_menu_info_details" />

</LinearLayout>